--- a/Two.html
+++ b/Two.html
@@ -10,7 +10,7 @@
     <body>
         <h2>ANIMAL MEDICINE</h2>
         <h3>ANIMAL'S HANDLED</h3>
-        <ol type="(i)" start="(i)">
+        <ol type="i" start="i">
             <li>Dogs</li>
             <li>Cats</li>
             <li>Cattle </li>
